<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:layout="@layout/prefs_header_general"
        android:title="@string/general" >
        <EditTextPreference
            android:key="nickname"
            android:persistent="false"
            android:summary="@string/prefs_nickname_description"
            android:title="@string/prefs_nickname_title" />
        <EditTextPreference
            android:key="host"
            android:persistent="false"
            android:summary="@string/prefs_host_description"
            android:title="@string/prefs_host_title" />
        <EditTextPreference
            android:key="port"
            android:persistent="false"
            android:summary="@string/prefs_port_description"
            android:title="@string/prefs_port_title" />

        <ListPreference
            android:entries="@array/refresh_intervals"
            android:entryValues="@array/refresh_interval_values"
            android:key="refresh_interval"
            android:persistent="false"
            android:summary="@string/prefs_refresh_interval_description"
            android:title="@string/prefs_refresh_interval_title"
            android:defaultValue="0"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/prefs_header_auth"
        android:title="@string/auth" >
        <com.gmail.at.faint545.views.CompoundEditTextPreference
            android:key="apikey"
            android:persistent="false"
            android:summary="@string/prefs_apikey_description"
            android:title="@string/prefs_apikey_title"/>
        <EditTextPreference
            android:key="username"
            android:persistent="false"
            android:summary="@string/prefs_username_description"
            android:title="@string/prefs_username_title" />
        <EditTextPreference
            android:key="password"
            android:persistent="false"
            android:summary="@string/prefs_password_description"
            android:title="@string/prefs_password_title" />
    </PreferenceCategory>

</PreferenceScreen>